# fastapi-authentication

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  fastapi.db  pyproject.toml
app/: config.py  database.py  fastapi.db  main.py  models.py  schemas.py
app/api/: dependencies.py  main.py
app/api/routes/: auth.py  products.py  users.py
app/services/: auth.py
